tests/baselines/reference/qualifiedName_entity-name-resolution-does-not-affect-class-heritage.errors.txt
tests/cases/compiler/qualifiedName_entity-name-resolution-does-not-affect-class-heritage.ts(5,20): error TS2305: Module 'Alpha' has no exported member 'x'.


==== tests/cases/compiler/qualifiedName_entity-name-resolution-does-not-affect-class-heritage.ts (1 errors) ====
    module Alpha {
        export var x = 100;
    }
    
    class Beta extends Alpha.x {
                       ~~~~~~~
!!! error TS2305: Module 'Alpha' has no exported member 'x'.
    }